# Artificial-Intelligence-Project

./: .gitmodules  README.md
Project/: .gitmodules  CMakeLists.txt
Project/Project/Headers/: shader_m.hpp
Project/Project/Sources/: main.cpp
glitter/: .gitmodules  CMakeLists.txt
glitter/Glitter/Headers/: glitter.hpp
glitter/Glitter/Headers/Rendering/: shader.hpp
glitter/Glitter/Headers/Window/: window.hpp
glitter/Glitter/Shaders/: shader.fs  shader.vs
glitter/Glitter/Sources/: main.cpp
glitter/Glitter/Sources/Rendering/: shader.cpp
glitter/Glitter/Sources/Window/: window.cpp
